<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/history_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/TotalsTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="40sp"
        android:gravity="top|center"
        android:text="@string/TotalsTitle"
        android:textStyle="bold"
        android:textColor="#FF5722"
        android:padding="16dp"/>



    <TextView
        android:id="@+id/Spending"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/Spending"
        android:textStyle="bold"
        android:textColor="#FF5722"
        android:layout_marginLeft="32dp"
        android:layout_below="@+id/TotalsTitle"/>
    <TextView
        android:id="@+id/Sugar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/Sugar"
        android:textStyle="bold"
        android:textColor="#FF5722"
        android:layout_marginLeft="32dp"
        android:layout_below="@+id/Spending"/>
    <TextView
        android:id="@+id/Calories"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/Calories"
        android:textStyle="bold"
        android:textColor="#FF5722"
        android:layout_marginLeft="32dp"
        android:layout_below="@+id/Sugar"/>







    <TextView
        android:id="@+id/historyText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="32sp"
        android:gravity="center|left"
        android:layout_marginLeft="32dp"
        android:text="@string/history_data"
        android:textStyle="bold"
        android:textColor="#FF5722"/>




</RelativeLayout>

<Button
android:id="@+id/btnBack"
android:layout_width="match_parent"
android:layout_height="48dp"
android:layout_gravity="bottom|center"
android:layout_marginBottom="50dp"
android:text="@string/back"
android:textAllCaps="false"
android:textColor="@android:color/black" />


</FrameLayout>
