<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">



    <TextView
        android:id="@+id/SetLocationText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:textSize="40sp"
        android:gravity="top|center"
        android:text="@string/LocationActivityTitle"
        android:textStyle="bold"
        android:textColor="#FF5722" />


    <Button
        android:id="@+id/btnCosta"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="200dp"
        android:layout_gravity="top|center"
        android:layout_marginBottom="50dp"
        android:text="@string/Costa"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />


    <Button
        android:id="@+id/btnCS"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="top|center"
        android:layout_marginBottom="50dp"
        android:text="@string/ComputerScience"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:layout_below="@id/btnCosta"/>


    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="top|center"
        android:layout_marginBottom="50dp"
        android:text="@string/Home"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:layout_below="@id/btnCS"/>

    <TextView
        android:id="@+id/PredictionText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:textSize="40sp"
        android:gravity="top|center"
        android:text="@string/PredictionText"
        android:textStyle="bold"
        android:textColor="#FF5722"
        android:layout_below="@id/btnHome"/>

    <TextView
        android:id="@+id/btnResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:textSize="40sp"
        android:gravity="bottom|center"
        android:text="@string/PredictionText"
        android:textStyle="bold"
        android:textColor="#FF5722"
        />



</RelativeLayout>


</FrameLayout>
