<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"


    tools:context="com.campusfoodclassifier.tflite.MainActivity">


    <com.wonderkiln.camerakit.CameraView
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center|top" />

    <Button
        android:id="@+id/btnToggleCamera"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="top|center"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="308dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textBigResult"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center"
            android:padding="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"

            android:textStyle="bold"
            android:textSize="45dp"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="390dp"
            android:layout_height="62dp"
            android:layout_gravity="top|center"
            android:layout_marginBottom="50dp"
            android:background="@android:color/transparent" />

        <ImageView
            android:id="@+id/imageViewResult"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="2dp"
            android:layout_below="@id/textBigResult"/>

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:fadeScrollbars="false"
            android:gravity="left"
            android:maxLines="15"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:padding="2dp"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/imageViewResult"
            android:layout_below="@id/textBigResult"/>

        <TextView
            android:id="@+id/textViewNutrition"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fadeScrollbars="false"
            android:gravity="left"
            android:maxLines="15"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:padding="2dp"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/textViewResult"
            android:layout_toRightOf="@id/imageViewResult"
            />


    </RelativeLayout>



    <Button
        android:id="@+id/btnLocation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="98dp"
        android:text="@string/location"
        android:textAllCaps="false"
        android:textColor="@android:color/black"/>
    <Button
        android:id="@+id/btnHistory"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp"
        android:text="@string/history"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnDetectObject"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center"
        android:background="#FF5722"
        android:text="@string/detect_object"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:visibility="gone" />


</FrameLayout>
